# ChangeLog for net-wireless/madwifi-ng-tools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/madwifi-ng-tools/ChangeLog,v 1.33 2008/07/07 22:34:57 gentoofan23 Exp $

  07 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  madwifi-ng-tools-0.9.4.ebuild:
  stable amd64, bug 225099, thanks to ciberfred for testing

  18 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  madwifi-ng-tools-0.9.4.ebuild:
  stable x86, bug 225099

  06 Jun 2008; Peter Volkov <pva@gentoo.org> metadata.xml:
  Added myself as maintainer.

*madwifi-ng-tools-0.9.4 (14 Feb 2008)

  14 Feb 2008; Steev Klimaszewski <steev@gentoo.org>
  +madwifi-ng-tools-0.9.4.ebuild:
  Bump for 0.9.4 release which is compatible with kernel 2.6.24

  26 Oct 2007; Steve Dibb <beandog@gentoo.org>
  madwifi-ng-tools-0.9.3.3.ebuild:
  amd64 stable, security bug 195705

  24 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  madwifi-ng-tools-0.9.3.3.ebuild:
  ppc stable, bug #195705

  21 Oct 2007; Markus Meier <maekke@gentoo.org>
  madwifi-ng-tools-0.9.3.3.ebuild:
  x86 stable, security bug #195705

  15 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  madwifi-ng-tools-0.9.3.2.ebuild:
  ppc stable, bug #188902

  15 Aug 2007; Christoph Mende <angelos@gentoo.org>
  madwifi-ng-tools-0.9.3.2.ebuild:
  Stable on amd64 wrt security bug #188902

  14 Aug 2007; Andrej Kacian <ticho@gentoo.org>
  madwifi-ng-tools-0.9.3.2.ebuild:
  Stable on x86, security bug #188902.

*madwifi-ng-tools-0.9.3.2 (14 Aug 2007)

  14 Aug 2007; Steev Klimaszewski <steev@gentoo.org>
  +madwifi-ng-tools-0.9.3.2.ebuild:
  New upstream release, a number of bugfixes, read the changelog :)

*madwifi-ng-tools-0.9.3.1 (23 May 2007)

  23 May 2007; Stefan Schweizer <genstef@gentoo.org>
  +madwifi-ng-tools-0.9.3.1.ebuild:
  Version bump to fix security bug 179532 and to contain the headers bug 179348
