@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/madwifi-ng-tools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/madwifi-ng-tools/ChangeLog,v 1.33 2008/07/07 22:34:57 gentoofan23 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/madwifi-ng-tools/ChangeLog,v 1.34 2008/08/25 17:18:52 nixnut Exp $
+
+  25 Aug 2008; nixnut <nixnut@gentoo.org> madwifi-ng-tools-0.9.4.ebuild:
+  Stable on ppc wrt bug 225099
 
   07 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
   madwifi-ng-tools-0.9.4.ebuild:
